multi-service-l4-dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world3
  labels:
    app: hello-world3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world3
  template:
    metadata:
      labels:
        app: hello-world3
    spec:
      containers:
      - name: echo-server
        image: hashicorp/http-echo
        args:
        - -listen=:80
        - -text="Hello from the hello-world3 service on Kubernetes running on Mesosphere DC/OS!"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.dcos.io/edgelb-pool-name: "dev-lb-pool"
    kubernetes.dcos.io/edgelb-pool-portmap.80: "10003"
  labels:
    app: hello-world3
  name: hello-world3
spec:
  type: LoadBalancer
  selector:
    app: hello-world3
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
