multi-service-l4.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world1
  labels:
    app: hello-world1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world1
  template:
    metadata:
      labels:
        app: hello-world1
    spec:
      containers:
      - name: echo-server
        image: hashicorp/http-echo
        args:
        - -listen=:80
        - -text="Hello from the hello-world1 service on Kubernetes running on Mesosphere DC/OS!"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.dcos.io/edgelb-pool-name: "dklb"
    kubernetes.dcos.io/edgelb-pool-portmap.80: "10001"
    kubernetes.dcos.io/edgelb-pool-cpus: "200m"
    kubernetes.dcos.io/edgelb-pool-mem: "1024Mi"
  labels:
    app: hello-world1
  name: hello-world1
spec:
  type: LoadBalancer
  selector:
    app: hello-world1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dcos-site1
  labels:
    app: dcos-site1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dcos-site1
  template:
    metadata:
      labels:
        app: dcos-site1
    spec:
      containers:
      - name: dcos-site
        image: mesosphere/dcos-website:cff383e4f5a51bf04e2d0177c5023e7cebcab3cc
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.dcos.io/edgelb-pool-name: "dklb"
    kubernetes.dcos.io/edgelb-pool-portmap.80: "10002"
    kubernetes.dcos.io/edgelb-pool-cpus: "200m"
    kubernetes.dcos.io/edgelb-pool-mem: "1024Mi"
  labels:
    app: dcos-site1
  name: dcos-site1
spec:
  type: LoadBalancer
  selector:
    app: dcos-site1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: redis
  name: redis
spec:
  containers:
  - name: redis
    image: redis:5.0.3
    ports:
    - name: redis
      containerPort: 6379
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.dcos.io/edgelb-pool-name: "dklb"
    kubernetes.dcos.io/edgelb-pool-portmap.6379: "16379"
    kubernetes.dcos.io/edgelb-pool-cpus: "200m"
    kubernetes.dcos.io/edgelb-pool-mem: "1024Mi"
  labels:
    app: redis
  name: redis
spec:
  type: LoadBalancer
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
---
