multi-service-l7-dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world4
  labels:
    app: hello-world4
    owner: dklb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world4
  template:
    metadata:
      labels:
        app: hello-world4
    spec:
      containers:
      - name: echo-server
        image: hashicorp/http-echo
        args:
        - -listen=:80
        - -text="Hello from the hello-world4 service on Kubernetes running on Mesosphere DC/OS!"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world4
    owner: dklb
  name: hello-world4
spec:
  ports:
  - nodePort: 30909
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello-world4
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: edgelb
    kubernetes.dcos.io/edgelb-pool-name: "dklb-dev"
    kubernetes.dcos.io/edgelb-pool-port: "82"
  labels:
    owner: dklb
  name: helloworld2-ig
spec:
  rules:
  - host: "mke-l7.ddns.net"
    http:
      paths:
      - backend:
          serviceName: hello-world4
          servicePort: 80
---
