multi-service-l7.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world4
  labels:
    app: hello-world4
    owner: dklb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world4
  template:
    metadata:
      labels:
        app: hello-world4
    spec:
      containers:
      - name: echo-server
        image: hashicorp/http-echo
        args:
        - -listen=:80
        - -text="Hello from the hello-world4 service on Kubernetes running on Mesosphere DC/OS!"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world4
    owner: dklb
  name: hello-world4
spec:
  ports:
  - nodePort: 30908
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello-world4
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: edgelb
    kubernetes.dcos.io/edgelb-pool-name: dklb
    kubernetes.dcos.io/edgelb-pool-port: "80"
  labels:
    owner: dklb
  name: helloworld4-ig
spec:
  rules:
  - host: "mke-l7.ddns.net"
    http:
      paths:
      - backend:
          serviceName: hello-world4
          servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world5
  labels:
    app: hello-world5
    owner: dklb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world5
  template:
    metadata:
      labels:
        app: hello-world5
    spec:
      containers:
      - name: echo-server
        image: hashicorp/http-echo
        args:
        - -listen=:80
        - -text="Hello from the hello-world5 service on Kubernetes running on Mesosphere DC/OS!"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world5
    owner: dklb
  name: hello-world5
spec:
  ports:
  - nodePort: 30909
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello-world5
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: edgelb
    kubernetes.dcos.io/edgelb-pool-name: dklb
    kubernetes.dcos.io/edgelb-pool-port: "81"
  labels:
    owner: dklb
  name: helloworld5-ig
spec:
  rules:
  - host: "mke-l7.ddns.net"
    http:
      paths:
      - backend:
          serviceName: hello-world5
          servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dcos-site3
  labels:
    app: dcos-site3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dcos-site3
  template:
    metadata:
      labels:
        app: dcos-site3
    spec:
      containers:
      - name: dcos-site3
        image: mesosphere/dcos-website:cff383e4f5a51bf04e2d0177c5023e7cebcab3cc
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dcos-site3
    owner: dklb
  name: dcos-site3
spec:
  ports:
  - nodePort: 30910
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: dcos-site3
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: edgelb
    kubernetes.dcos.io/edgelb-pool-name: dklb
    kubernetes.dcos.io/edgelb-pool-port: "82"
  labels:
    owner: dklb
  name: dcos-site3
spec:
  rules:
  - host: "mke-l7.ddns.net"
    http:
      paths:
      - backend:
          serviceName: dcos-site3
          servicePort: 80
